--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,9 @@ on:
     branches:
       - master
 
+env:
+  clippy_rust_version: '1.82'
+
 jobs:
   check:
     runs-on: ubuntu-latest
@@ -50,3 +53,13 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - name: check with all-features
         run: cargo hack --rust-version --no-private --no-dev-deps check --all-features
+
+  clippy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: ${{ env.clippy_rust_version }}
+          components: clippy
+      - run: cargo clippy --all-features --tests -- -D warnings
